# dns

./: Makefile  app.py  appv2.py  conceitos.txt  example.db  pyproject.toml
src/: database.py  models.py  repositories.py  server.py
tests/: conftest.py  test_handlers.py  test_models.py  test_repositories.py
